<resources>
    <string name="app_name">Smart Real Estate Search</string>
    <string name="real_estate_search">Smart Real Estate Search</string>
    <string name="smart_real_estate_search">Looking for your new home</string>
    <string name="go">GO</string>
    <string name="icon">icon</string>
    <string name="find_a_new_apartment">Looking for your new home!</string>
    <string name="how_to_use_this_app">How to use this app?</string>
    <string name="star_in_result">starInResult</string>
    <string name="home">Home</string>
    <string name="star_in_detail">starInDetail</string>
    <string name="back">Back</string>
    <string name="looking_for_an_apartment">log in as agency/landlord</string>
    <string name="fine_your_new_home">fine your new home</string>
    <string name="as_customer">as customer</string>
    <string name="todo">TODO</string>
    <string name="type_your_key_words">Type your key words</string>
    <string name="as_agency">As agency</string>
    <string name="support">Support</string>
    <string name="estate_details">Estate Details</string>
    <string name="looking_for_your_new_home">Looking for your new home</string>
    <string name="type_your_key_words_here">Type your key words here</string>
    <string name="welcome_to_smart_estate_search">Welcome to Smart Real Estate</string>
    <string name="help">Help</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="type_your_user_name_here">Type your user name here</string>
    <string name="password">Password</string>
    <string name="customer_login">Customer Login</string>
    <string name="property_detail">Property Detail</string>
    <string name="thousands_property_can_be_found_here">Thousands of property can be found here</string>
    <string name="select_pic">selectPic</string>
    <string name="login_pic">Login pic</string>
    <string name="find_your_new_home">Find your new home</string>
    <string name="history">History</string>
    <string name="like">Like</string>
    <string name="main_pic">mainPic</string>
    <string name="agency_login">Agency login</string>
    <string name="publish_history">Publish history</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="text_the_estate">Text the estate</string>
    <string name="add_the_estate">Add the estate</string>
    <string name="id">ID</string>
    <string name="bedroom">Bedroom</string>
    <string name="garage">Garage</string>
    <string name="rent">Rent</string>
    <string name="location">Location</string>
    <string name="highlights">Highlights</string>
    <string name="add_data">Add data</string>
    <string name="delete_data">delete data</string>
    <string name="add_to_history">add to history</string>
    <string name="delete_from_history">delete from history</string>
    <string name="delete_from_data">delete from data</string>
    <string name="add_to_data">add to data</string>
    <string name="wow_i_like_it">wow,I like it!!!!!!</string>
</resources>